--- a/index.html
+++ b/index.html
@@ -1,80 +1,93 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Christian Ding</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Freehand&family=Rubik+Puddles&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Christian's Personal site</title>
-</head>
+  <body>
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-img" />
+      <h1>I'm Chris.</h1>
+      <h2>a <span class="pro">pro</span>grammer.</h2>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" />
+      <img src="images/mountain.png" alt="mountain-img" />
+    </div>
 
-<body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="Dio Pose-modified.png" alt="Chris Profile Picture"></td>
-      <td>
-        <h1>Christian Ding</h1>
-        <p><em>CTO of <a href="https://www.gojek.com/en-id/">Gojek</a></em></p>
-        <p>I am a Product Manager and Web Developer. I hit up the gym every single morning.</p>
-      </td>
-    </tr>
-  </table>
+    <div class="middle-container">
+      <div class="profile">
+        <img class="dio-img" src="images/Dio.png" alt="dio-img" />
+        <h2>Hello.</h2>
+        <p class="intro">
+          Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna.
+          Non auctor, montes nulla distinctio.
+        </p>
+      </div>
+      <hr />
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img
+            class="workout-skill"
+            src="https://cdn-icons.flaticon.com/png/512/2871/premium/2871266.png?token=exp=1655217345~hmac=d16cac7b3288ed85272de7d564b67dcc"
+            alt="workout-skill"
+          />
+          <h3>Workout</h3>
+          <p>
+            Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
+            Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit
+            nam, lectus ante, ut lorem eros.
+          </p>
+        </div>
+        <div class="skill-row">
+          <img
+            class="photography-skill"
+            src="https://cdn-icons-png.flaticon.com/512/1042/1042390.png"
+            alt="photography-skill"
+          />
+          <h3>Photography</h3>
+          <p>
+            Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
+            bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel
+            eu, rutrum nam.
+          </p>
+        </div>
+      </div>
+      <hr />
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <p class="contact-message">
+          Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
+          tellus donec dui, ornare erat.
+        </p>
+        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      </div>
+    </div>
 
-  <hr>
-
-  <h3><strong>Education</strong></h3>
-  <ul>
-    <li>Binus University. 2019 - 2023</li>
-    <li>Universitas Prasetiya Mulya. 2017 - 2019</li>
-    <li>SMA Pangudi Luhur. 2014 - 2017</li>
-  </ul>
-
-  <hr>
-
-  <h3>Work Experience</h3>
-
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2022</td>
-        <td>Business Development Intern at Shopee</td>
-      </tr>
-      <tr>
-        <td>2018</td>
-        <td>After Sales Intern at BMW Astra</td>
-      </tr>
-    </tbody>
-  </table>
-
-  <hr>
-
-  <h3>Skills</h3>
-
-  <table cellspacing="10">
-    <tr>
-      <td>iOS Development</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>Web Development</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>Photography</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-  </table>
-
-
-  <hr />
-
-  <a href="hobbies.html">My Hobbies</a>
-  <a href="personal-information.html">Personal Information</a>
-
-</body>
-
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p class="copyright">© 2022 Christian Ding @ The App Brewery</p>
+    </div>
+  </body>
 </html>
